[gd_scene load_steps=6 format=3 uid="uid://bwj7ef1aq2yrf"]

[ext_resource type="Script" path="res://scripts/spike.gd" id="1_mdnbf"]
[ext_resource type="Texture2D" uid="uid://cgokukgh0wyxk" path="res://assets/sprites/traps/singlespike.png" id="2_jkmni"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1h31d"]
atlas = ExtResource("2_jkmni")
region = Rect2(0, 0, 16, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_dcda8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h31d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sakho"]
size = Vector2(16, 5)

[node name="spike" type="Area2D"]
z_index = -1
collision_mask = 2
script = ExtResource("1_mdnbf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
sprite_frames = SubResource("SpriteFrames_dcda8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_sakho")

[node name="damagetick" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="damagetick" to="." method="_on_damagetick_timeout"]
